crates/escalier_parser/src/snapshots/escalier_parser__tests__numbers-2.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"1.23;\")"
---
Ok(
    Program {
        body: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 5,
                    },
                },
                span: 0..5,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 4,
                            },
                        },
                        span: 0..4,
                        kind: Lit(
                            Num(
                                Num {
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 0,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                    },
                                    span: 0..4,
                                    value: "1.23",
                                },
                            ),
                        ),
                        inferred_type: None,
                    },
                ),
            },
        ],
    },
)
