crates/escalier_parser/src/snapshots/escalier_parser__tests__numbers.snap
---
source: crates/escalier_parser/src/lib.rs
expression: "parse(\"10;\")"
---
Ok(
    Program {
        body: [
            Expr {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 3,
                    },
                },
                span: 0..3,
                expr: Expr {
                    loc: SourceLocation {
                        start: Position {
                            line: 0,
                            column: 0,
                        },
                        end: Position {
                            line: 0,
                            column: 2,
                        },
                    },
                    span: 0..2,
                    kind: Lit(
                        Num(
                            Num {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 0,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 2,
                                    },
                                },
                                span: 0..2,
                                value: "10",
                            },
                        ),
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
